# condey

./: Cargo.toml
examples/: app.rs  bench.rs  crud.rs  state.rs
src/: lib.rs
src/core/: condey.rs  extract.rs  from_body.rs  from_request.rs  handler.rs  interceptor.rs  mod.rs  param.rs  request.rs  response.rs  route.rs  state.rs
src/core/response/: adapters.rs  traits.rs
src/openapi/: generator.rs
src/types/: form.rs  json.rs  mod.rs  path.rs  query.rs
