[package]
name = "condey"
version = "0.1.0"
authors = ["Marcin Pajkowski <marcin.pajkowski@gmail.com>"]
edition = "2018"

[[example]]
name = "app"
path = "examples/app.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
route-recognizer = "0.3"
percent-encoding = "2.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-futures = "0.2"
async-trait = "0.1"
serde = "1"
serde_json = "1"
fnv = "1"
serde_urlencoded = "0.7"

[dev-dependencies]
tracing-subscriber = "0.2"

[dev-dependencies.serde]
features = ["derive"]
