[package]
name = "condey"
version = "0.1.0"
authors = ["Marcin Pajkowski <marcin.pajkowski@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["time"] }
hyper = { version = "0.14", features = ["server", "stream", "http1", "tcp"] }
futures = "0.3"
route-recognizer = "0.3"
percent-encoding = "2.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-futures = "0.2"
async-trait = "0.1"
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
fnv = "1"
serde_urlencoded = "0.7"
dyn-clone = "1"
schemars = { version = "0.8", features = ["preserve_order"] }
okapi = { git = "http://github.com/GREsau/okapi.git", branch = "master" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.2"
